<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDetailImageRecipe"
            android:layout_width="0dp"
            android:layout_height="262dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgDetailRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDetailTitleRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvDetailImageRecipe" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailTitleRecipe" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/bahan_bahan"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvDetailAlatBahan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/prosedur_pembuatan"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvDetailProsedur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/kalori_per_serve"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tvDetailKalori"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="14sp"
                />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvDetailImageRecipe"
            android:contentDescription="@string/add_to_favorite" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>